CAPY-6 add new app component

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -5,4 +5,8 @@
     h1 {
         @apply mb-4 text-2xl font-bold;
     }
+
+    .component-alert-text {
+        @apply text-center text-xl font-bold;
+    }
 }
