--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -2,8 +2,12 @@
 @import '@nuxt/ui';
 
 @layer base {
-    h1 {
+    h2 {
         @apply mb-4 text-2xl font-bold;
+    }
+
+    h3 {
+        @apply mb-1 font-bold;
     }
 
     .component-alert-text {
