--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,2 +1,16 @@
 @import 'tailwindcss';
 @import '@nuxt/ui';
+
+@layer base {
+    h2 {
+        @apply mb-4 text-2xl font-bold;
+    }
+
+    h3 {
+        @apply mb-1 font-bold lowercase;
+    }
+
+    .component-alert-text {
+        @apply text-center text-xl font-bold;
+    }
+}
