--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -2,6 +2,10 @@
 @import '@nuxt/ui';
 
 @layer base {
+    h1 {
+        @apply mb-4 text-4xl/12 font-bold;
+    }
+
     h2 {
         @apply mb-4 text-2xl font-bold;
     }
