--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -22,6 +22,43 @@
         padding: 0 !important;
     }
 
+    .todo-card > div {
+        padding: 0 !important;
+    }
+
+    .todo-checkbox-green {
+        border-color: oklch(0.723 0.191 149.579);
+    }
+    .todo-checkbox-green:hover {
+        background-color: oklch(0.723 0.191 149.579 / 0.15);
+    }
+    .todo-checkbox-green.checked {
+        background-color: oklch(0.723 0.191 149.579);
+        border-color: oklch(0.723 0.191 149.579);
+    }
+
+    .todo-checkbox-yellow {
+        border-color: oklch(0.795 0.184 86.047);
+    }
+    .todo-checkbox-yellow:hover {
+        background-color: oklch(0.795 0.184 86.047 / 0.15);
+    }
+    .todo-checkbox-yellow.checked {
+        background-color: oklch(0.795 0.184 86.047);
+        border-color: oklch(0.795 0.184 86.047);
+    }
+
+    .todo-checkbox-red {
+        border-color: oklch(0.637 0.237 25.331);
+    }
+    .todo-checkbox-red:hover {
+        background-color: oklch(0.637 0.237 25.331 / 0.15);
+    }
+    .todo-checkbox-red.checked {
+        background-color: oklch(0.637 0.237 25.331);
+        border-color: oklch(0.637 0.237 25.331);
+    }
+
     .bg-hearts {
         background-image: url("data:image/svg+xml,%3Csvg width='120' height='120' viewBox='0 0 120 120' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%23000000' fill-opacity='0.1' fill-rule='evenodd'%3E%3Cpath transform='translate(10, 10) scale(1.5) rotate(-15 12 12)' d='M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z'/%3E%3Cpath transform='translate(80, 0) scale(0.8) rotate(20 12 12)' d='M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z'/%3E%3Cpath transform='translate(40, 70) scale(1.1) rotate(5 12 12)' d='M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z'/%3E%3Cpath transform='translate(90, 60) scale(0.9) rotate(-25 12 12)' d='M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z'/%3E%3C/g%3E%3C/svg%3E");
         background-repeat: repeat;
