--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -27,8 +27,8 @@
     }
 
     :root {
-        --todo-green: oklch(0.723 0.191 149.579);
-        --todo-green-alpha: oklch(0.723 0.191 149.579 / 0.15);
+        --todo-teal: oklch(0.723 0.191 149.579);
+        --todo-teal-alpha: oklch(0.723 0.191 149.579 / 0.15);
         --todo-yellow: oklch(0.795 0.184 86.047);
         --todo-yellow-alpha: oklch(0.795 0.184 86.047 / 0.15);
         --todo-red: oklch(0.637 0.237 25.331);
@@ -36,23 +36,23 @@
     }
 
     .dark {
-        --todo-green: oklch(0.65 0.17 149.579);
-        --todo-green-alpha: oklch(0.65 0.17 149.579 / 0.2);
+        --todo-teal: oklch(0.65 0.17 149.579);
+        --todo-teal-alpha: oklch(0.65 0.17 149.579 / 0.2);
         --todo-yellow: oklch(0.72 0.16 86.047);
         --todo-yellow-alpha: oklch(0.72 0.16 86.047 / 0.2);
         --todo-red: oklch(0.58 0.2 25.331);
         --todo-red-alpha: oklch(0.58 0.2 25.331 / 0.2);
     }
 
-    .todo-checkbox-green {
-        border-color: var(--todo-green);
+    .todo-checkbox-teal {
+        border-color: var(--todo-teal);
     }
-    .todo-checkbox-green:hover {
-        background-color: var(--todo-green-alpha);
+    .todo-checkbox-teal:hover {
+        background-color: var(--todo-teal-alpha);
     }
-    .todo-checkbox-green.checked {
-        background-color: var(--todo-green);
-        border-color: var(--todo-green);
+    .todo-checkbox-teal.checked {
+        background-color: var(--todo-teal);
+        border-color: var(--todo-teal);
     }
 
     .todo-checkbox-yellow {
